<resources>
    <string name="app_name">calculator_final</string>
    <string name="_1">1</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mul">*</string>
    <string name="first_input">first_input</string>
    <string name="textview1">textview</string>
    <string name="second_input">second_input</string>
    <string name="div">/</string>
    <string name="textview2">textview</string>
    <string name="result">result</string>
    <string name="textview">textview</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="sub">-</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="add">+</string>
    <string name="one"><![CDATA[<--]]></string>
    <string name="clear">clear</string>
    <string name="_0">0</string>
</resources>